   	file to by-pass when spamd-max-size is being used. Steve F.


--2.3.9--

   !	CACHE GET reports strangely formatted timestamp string. Fix type
	conversion bug related to 64-bit system. The cache stores times
	as 32-bits, but on a 64-bit system time_t is 64-bits. Added a
	conversion function that will first convert the unsigned 32-bit
	value into time_t before formatting the output string.

--2.3.8--

   !	attachmentContent: changed FILTER_ATTACHMENT_CONTENT_SHORTCUT
   	test, which for long messages (>64 KB) meant that attachmentDot was
	never called.

--2.3.7--

   !	access.c: Removed use of smdbAccessIsOk that folded SMDB_ACCESS_
	codes into a limited subset. This had the adverse affect of
	folding DISARD into an OK. This is done for sendmail milters,
	but in smtpf we don't support all the sendmail action words.

--2.3.6--

   !	accessMail, accessRcpt: Combo tags never supported pattern lists
	by design; this was due in part to the question of what string
	should be tested against the pattern list (first, second, first
	and second joined). After some thought, have enhanced the design
	of combo tags to allow for pattern lists that check the first
	tag element followed by the second tag element against the
	pattern list. Requested by Quentin Campbell.


--2.3.5--

   !	spamd_open: remove duplicate Received header.

--2.3.4--

  !!	Fixed potential seg.fault by adding missing message "trap" flag
	to the summary table to match MSG_TRAP.

   !	clamd, ctasd: skip scanning for discard or trap.

   !	Updated new message numbers.

--2.3.3--

   !	CLIENT_IS_TRAP and MSG_TRAP should continue to set SMTPF_DISCARD
   	until cmdData hits the final dot in order to by-pass all the spam
   	tests.

   !	chunkBufferForward: don't count dot transparency application when
   	forwarding a chunk, otherwise the output loop could prematurely
   	terminate, losing output.

   !	Reassert that TRAP messages are excluded from "click" replies.

--2.3.2--
